--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,6 +7,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src"],
+  "include": ["lib", "components"],
   "exclude": ["node_modules", "dist"]
 }
