--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -5,17 +5,17 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/index.scss",
+    "css": "index.scss",
     "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "@/src/components",
-    "hooks": "@/src/hooks",
-    "lib": "@/src/lib",
-    "utils": "@/src/lib/utils",
-    "ui": "@/src/components/ui"
+    "components": "@/components",
+    "hooks": "@/hooks",
+    "lib": "@/lib",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui"
   },
   "iconLibrary": "lucide"
 }
