--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,8 @@
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "sass": "^1.83.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.5.4"
   }
 }
