--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,13 +7,13 @@
     "./lib/utils": "./lib/utils/index.ts",
     "./tailwind.config": "./tailwind.config.js",
     "./postcss.config": "./postcss.config.js",
-    "./styles": "./styles/index.scss"
+    "./styles": "./styles/index.css"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
-    "tailwind:build": "pnpm dlx tailwindcss -i ./styles/index.scss -o ./dist/index.css --watch"
+    "tailwind:build": "pnpm dlx tailwindcss -i ./styles/index.css -o ./dist/index.css --watch"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
