--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "styles/index.css",
+    "css": "styles/index.scss",
     "baseColor": "zinc",
     "cssVariables": true
   },
