--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -5,16 +5,16 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "styles/index.scss",
+    "css": "src/styles/index.scss",
     "baseColor": "zinc",
     "cssVariables": true
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@workspace/ui/components",
-    "utils": "@workspace/ui/lib/utils",
-    "hooks": "@workspace/ui/hooks",
-    "lib": "@workspace/ui/lib",
-    "ui": "@workspace/ui/components"
+    "components": "./src/components",
+    "utils": "./src/lib/utils",
+    "hooks": "./src/hooks",
+    "lib": "./src/lib",
+    "ui": "./src/components"
   }
 }
