--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./button": "./components/button.tsx",
-    "./lib/utils": "./lib/utils/index.ts",
     "./tailwind.config": "./tailwind.config.js",
     "./postcss.config": "./postcss.config.js",
-    "./styles": "./styles/index.scss"
+    "./button": "./src/components/button.tsx",
+    "./lib/utils": "./src/lib/utils/index.ts",
+    "./styles": "./src/styles/index.scss"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
