--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,12 +12,9 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "lucide-react": "^0.473.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -25,10 +22,8 @@
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "sass": "^1.83.4",
-    "tailwindcss": "^3.4.17",
     "typescript": "5.5.4"
   }
 }
