--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,6 +7,6 @@
       "@repo/ui/*": ["./src/*"]
     }
   },
-  "include": ["src/lib", "src/components"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
