--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,6 +5,8 @@
   "exports": {
     "./tailwind.config": "./tailwind.config.ts",
     "./postcss.config": "./postcss.config.mjs",
+    "./stylelint.config": "./stylelint.config.js",
+    "./next.config": "./next.config.ts",
     "./button": "./src/components/button.tsx",
     "./lib/utils": "./src/lib/utils/index.ts",
     "./styles": "./src/styles/index.scss"
@@ -13,7 +15,8 @@
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
-    "tailwind:build": "pnpm dlx tailwindcss -i ./styles/index.scss -o ./dist/index.css --watch"
+    "tailwind:build": "pnpm dlx tailwindcss -i ./styles/index.scss -o ./dist/index.css --watch",
+    "stylelint:scss": "pnpm dlx stylelint \"**/*.scss\""
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -25,7 +28,10 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "sass": "^1.83.4",
+    "stylelint": "^16.13.2",
+    "stylelint-config-standard-scss": "^14.0.0",
     "tailwindcss": "^3.4.17",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "5.5.4"
   },
   "dependencies": {
