feat: more components

--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -15,6 +15,6 @@
     "utils": "./src/lib/utils",
     "hooks": "./src/hooks",
     "lib": "./src/lib",
-    "ui": "./src/components"
+    "ui": "./src/components/ui"
   }
 }
