--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,12 +2,18 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "exports": {
     "./tailwind.config": "./tailwind.config.ts",
     "./postcss.config": "./postcss.config.mjs",
     "./stylelint.config": "./stylelint.config.js",
     "./next.config": "./next.config.ts",
-    "./button": "./src/components/button.tsx",
+    "./button": "./src/components/ui/button.tsx",
+    "./theme-provider": "./src/components/theme-provider.tsx",
+    "./theme-toggle": "./src/components/theme-toggle.tsx",
+    "./typography": "./src/components/typography.tsx",
+    "./container": "./src/components/container.tsx",
+    "./section": "./src/components/section.tsx",
     "./lib/utils": "./src/lib/utils/index.ts",
     "./styles": "./src/styles/index.scss"
   },
@@ -16,7 +22,9 @@
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "tailwind:build": "pnpm dlx tailwindcss -i ./styles/index.scss -o ./dist/index.css --watch",
-    "stylelint:scss": "pnpm dlx stylelint \"**/*.scss\""
+    "stylelint:scss": "pnpm dlx stylelint \"**/*.scss\"",
+    "shadcnui:init": "pnpm dlx shadcn@latest init",
+    "shadcnui:add": "pnpm dlx shadcn@latest add"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -40,6 +48,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
     "next": "^15.1.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
