feat: more components

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,12 +8,18 @@
     "./postcss.config": "./postcss.config.mjs",
     "./stylelint.config": "./stylelint.config.js",
     "./next.config": "./next.config.ts",
+    "./section": "./src/components/section.tsx",
+    "./container": "./src/components/container.tsx",
+    "./header": "./src/components/header.tsx",
+    "./main": "./src/components/main.tsx",
+    "./footer": "./src/components/footer.tsx",
+    "./menu": "./src/components/menu.tsx",
+    "./nav": "./src/components/nav.tsx",
+    "./article": "./src/components/article.tsx",
+    "./typography": "./src/components/typography.tsx",
     "./button": "./src/components/ui/button.tsx",
     "./theme-provider": "./src/components/theme-provider.tsx",
     "./theme-toggle": "./src/components/theme-toggle.tsx",
-    "./typography": "./src/components/typography.tsx",
-    "./container": "./src/components/container.tsx",
-    "./section": "./src/components/section.tsx",
     "./lib/utils": "./src/lib/utils/index.ts",
     "./styles": "./src/styles/index.scss"
   },
