--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,6 +27,8 @@
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "tailwind:build": "pnpm dlx tailwindcss -i ./styles/index.scss -o ./dist/index.css --watch",
     "stylelint:scss": "pnpm dlx stylelint \"**/*.scss\"",
     "shadcnui:init": "pnpm dlx shadcn@latest init",
@@ -40,6 +42,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
     "postcss": "^8.5.1",
     "sass": "^1.83.4",
     "stylelint": "^16.13.2",
