--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,5 +28,12 @@
     "postcss": "^8.5.1",
     "sass": "^1.83.4",
     "typescript": "5.5.4"
-  }
+  },
+  "browserslist": [
+    "chrome 64",
+    "edge 79",
+    "firefox 67",
+    "opera 51",
+    "safari 12"
+  ]
 }
