--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "axios": "^1.7.9",
     "next": "^15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swr": "^2.3.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -27,6 +29,7 @@
     "jest": "^29.7.0",
     "postcss": "^8.5.1",
     "sass": "^1.83.4",
+    "server-only": "^0.0.1",
     "typescript": "5.5.4"
   },
   "browserslist": [
