--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,12 +1,17 @@
 {
-  "extends": "@repo/typescript-config/react-library.json",
+  "extends": "@repo/typescript-config/nextjs.json",
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
       "@repo/ui/*": ["./src/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["src"],
+  "include": ["src", "next-env.d.ts", "next.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
