--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "cm": "pnpm cz",
+    "husky:init": "pnpm dlx husky init",
     "manypkg:check": "manypkg check",
     "manypkg:fix": "manypkg fix",
     "manypkg:upgrade": "manypkg upgrade",
     "manypkg:npm-tag": "manypkg npm-tag",
     "manypkg:run": "manypkg run",
     "postinstall": "pnpm manypkg:check",
-    "prepare": "pnpm husky"
+    "prepare": "husky",
+    "release": "standard-version --no-verify"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@manypkg/cli": "^0.23.0",
     "commitizen": "^4.3.1",
     "concurrently": "^9.1.2",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
     "prettier": "^3.3.3",
+    "standard-version": "^9.5.0",
     "turbo": "^2.3.3",
     "typescript": "5.5.4"
   },
