--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -8,10 +8,10 @@ semi: false
 singleQuote: true
 quoteProps: 'as-needed'
 jsxSingleQuote: true
-trailingComma: none
+trailingComma: all
 bracketSpacing: true
-bracketSameLine: true
-arrowParens: avoid
+bracketSameLine: false
+arrowParens: always
 requirePragma: false
 insertPragma: false
 proseWrap: preserve
