--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,12 @@
       "mode": "auto"
     }
   ],
-  "files.associations": { "*.scss": "postcss", "*.css": "postcss" },
   "editor.quickSuggestions": {
     "strings": "on"
   },
   "tailwindCSS.includeLanguages": {
     "plaintext": "html"
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
