--- a/apps/orlov.app/package.json
+++ b/apps/orlov.app/package.json
@@ -29,10 +29,12 @@
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "autoprefixer": "^10.4.20",
     "jest": "^29.7.0",
     "postcss": "^8.5.1",
     "sass": "^1.83.4",
     "server-only": "^0.0.1",
+    "tailwindcss": "^3.4.17",
     "ts-toolbelt": "^9.6.0",
     "typescript": "5.5.4"
   },
